test/TestSuite/Syntax/Errors/undecl_flag.tjp
project test "Test" "1.0" 2007-03-25 +2m 

task t "T" {
# MARK: error 5 undecl_flag
	flags foo
}
